wk_taa_taaqa/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Detail__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id , &quot;Activity Details&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Month__c</fullName>
        <formula>MONTH( ActivityDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>IF(
BEGINS( Subject , &quot;Email:&quot;), &quot;Email&quot;,
IF(BEGINS (Subject, &quot;Call&quot;), &quot;Call&quot;,
IF(CONTAINS(TEXT( Event_Type__c),&quot;Demo&quot;),&quot;Demo&quot;,
IF(ISBLANK(TEXT(Demo_Type__c)) &amp;&amp;  IsTask = FALSE, &quot;Meeting&quot;,
&quot;Other&quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calls_Count__c</fullName>
        <formula>IF(  Activity_Type__c = &quot;Call&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calls Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Demo__c</fullName>
        <formula>ISPICKVAL( Demo_Status__c , &quot;Cancelled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Demo1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Demo__c</fullName>
        <formula>ISPICKVAL( Demo_Status__c , &quot;Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Activity__c</fullName>
        <formula>IF( BEGINS(WhoId, &quot;003&quot;) ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Opportunity_Activity__c</fullName>
        <formula>IF( BEGINS(WhatId, &quot;006&quot;) ,&quot;Opportunity&quot;,
IF( BEGINS(WhoId, &quot;003&quot;) ,&quot;Contact&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact/Opportunity Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Allows to capture the time in a day the record was created. Time is set for EST.</description>
        <formula>VALUE( MID( TEXT( CreatedDate ), 12, 2 ) )-4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Completion_Date__c</fullName>
        <label>Demo Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Count__c</fullName>
        <formula>IF(  Activity_Type__c = &quot;Demo&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Type__c</fullName>
        <label>Demo Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Presentation</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Jump Start, Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Owner:User.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Count__c</fullName>
        <formula>IF(Activity_Type__c = &quot;Email&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Conference Call</fullName>
                </value>
                <value>
                    <fullName>Demo - Professional</fullName>
                </value>
                <value>
                    <fullName>Demo - Corp. Direct</fullName>
                </value>
                <value>
                    <fullName>Demo - Corp. Indirect</fullName>
                </value>
                <value>
                    <fullName>Demo - Professional Software</fullName>
                </value>
                <value>
                    <fullName>Demo - R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Demo - Webinar</fullName>
                </value>
                <value>
                    <fullName>R&amp;L Meeting/Demo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSR_Outcomes__c</fullName>
        <inlineHelpText>Enter notes or outcomes when the activity is completed.</inlineHelpText>
        <label>FSR Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gain_Access_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via workflow for Gain Access Contact Made calls</description>
        <label>Gain Access Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <formula>TEXT(Owner:User.High_Level_Division__c)</formula>
        <label>High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_SA__c</fullName>
        <formula>Solution_Architect_LU__r.Id =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Owner:User.Market__c)</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Count__c</fullName>
        <formula>IF(  Activity_Type__c = &quot;Meeting&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>($User.FirstName + &quot; &quot; + $User.LastName ) = Solution_Architect_Manager__c  || 
($User.FirstName + &quot; &quot; + $User.LastName ) = Solution_Architect_Upper_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_SA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If no SA is needed for a demo, check this box</inlineHelpText>
        <label>No SA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Activity__c</fullName>
        <formula>IF(   BEGINS(WhatId, &quot;006&quot;) ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Product__c</fullName>
        <inlineHelpText>Must be populated for Demos if Other is selected in Product Shown.</inlineHelpText>
        <label>Other Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Shown__c</fullName>
        <label>Product Shown</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting Research Manager</fullName>
                </value>
                <value>
                    <fullName>ActiveData</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Audit Accelerator</fullName>
                </value>
                <value>
                    <fullName>AutoFlow</fullName>
                </value>
                <value>
                    <fullName>Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>Client Accounting Suite</fullName>
                </value>
                <value>
                    <fullName>Compliance Dashboard</fullName>
                </value>
                <value>
                    <fullName>Document On-Premise</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>eTax Audit Room</fullName>
                </value>
                <value>
                    <fullName>eTax Calendar</fullName>
                </value>
                <value>
                    <fullName>eTax Portal</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets (CorpSystem)</fullName>
                </value>
                <value>
                    <fullName>Global fx</fullName>
                </value>
                <value>
                    <fullName>Global Integrator</fullName>
                </value>
                <value>
                    <fullName>IC - Client Relate</fullName>
                </value>
                <value>
                    <fullName>IC - Estate Planning</fullName>
                </value>
                <value>
                    <fullName>IC - Fast Answers</fullName>
                </value>
                <value>
                    <fullName>IC - International</fullName>
                </value>
                <value>
                    <fullName>IC - RADAR</fullName>
                </value>
                <value>
                    <fullName>IC - Smart Charts</fullName>
                </value>
                <value>
                    <fullName>IC - Tax Prep Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Outcomes__c</fullName>
        <label>SA Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLX_ActivityID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Saleslogix Activity ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLX_Category__c</fullName>
        <label>Saleslogix Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Contact_Name__c</fullName>
        <label>SLX Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_OriginalUser__c</fullName>
        <label>Saleslogix Original User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Pod__c</fullName>
        <formula>TEXT(Owner:User.Sales_Pod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Pod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Manager__c</fullName>
        <formula>Owner:User.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source_ActivityID__c</fullName>
        <label>Service Source ActivityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source_Contact_Email__c</fullName>
        <label>Service Source Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source_Contact_Name__c</fullName>
        <label>Service Source Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source_Rep__c</fullName>
        <label>Service Source Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Notes__c</fullName>
        <label>Short Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_2__c</fullName>
        <inlineHelpText>If multiple Solution Architects are presenting, enter the name of the second SA here.</inlineHelpText>
        <label>Solution Architect (2)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Chauvin</fullName>
                </value>
                <value>
                    <fullName>Alicia Judit</fullName>
                </value>
                <value>
                    <fullName>Art Feldman</fullName>
                </value>
                <value>
                    <fullName>Beth Patrick</fullName>
                </value>
                <value>
                    <fullName>Brian Siet</fullName>
                </value>
                <value>
                    <fullName>Cathy Hocutt</fullName>
                </value>
                <value>
                    <fullName>Chuck Moss</fullName>
                </value>
                <value>
                    <fullName>Curtis Olive</fullName>
                </value>
                <value>
                    <fullName>Devin Houlihan</fullName>
                </value>
                <value>
                    <fullName>Diann Powell</fullName>
                </value>
                <value>
                    <fullName>Eliot Becker</fullName>
                </value>
                <value>
                    <fullName>Ellen Cook</fullName>
                </value>
                <value>
                    <fullName>Gina Chen</fullName>
                </value>
                <value>
                    <fullName>Guillermo Rodriguez</fullName>
                </value>
                <value>
                    <fullName>James Karst</fullName>
                </value>
                <value>
                    <fullName>Jared Jones</fullName>
                </value>
                <value>
                    <fullName>Jim Meseke</fullName>
                </value>
                <value>
                    <fullName>John Mason</fullName>
                </value>
                <value>
                    <fullName>Julie Lemberg</fullName>
                </value>
                <value>
                    <fullName>Ken Fried</fullName>
                </value>
                <value>
                    <fullName>Kim Conaway</fullName>
                </value>
                <value>
                    <fullName>Lance Center</fullName>
                </value>
                <value>
                    <fullName>Larry Kaminsky</fullName>
                </value>
                <value>
                    <fullName>Lia Skoblov</fullName>
                </value>
                <value>
                    <fullName>Linda Boerma</fullName>
                </value>
                <value>
                    <fullName>Mark Collins</fullName>
                </value>
                <value>
                    <fullName>Michael MacCarthy</fullName>
                </value>
                <value>
                    <fullName>Nate Brown</fullName>
                </value>
                <value>
                    <fullName>Ray Schwarz</fullName>
                </value>
                <value>
                    <fullName>Ron Eiken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Architect_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Manager__c</fullName>
        <formula>Solution_Architect_LU__r.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Architect Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Upper_Management__c</fullName>
        <formula>Solution_Architect_LU__r.Manager.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Architect Upper Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <label>Solution Architect</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Rep Delivered (No SA Needed)</fullName>
                </value>
                <value>
                    <fullName>Adam Chauvin</fullName>
                </value>
                <value>
                    <fullName>Alicia Judit</fullName>
                </value>
                <value>
                    <fullName>Art Feldman</fullName>
                </value>
                <value>
                    <fullName>Beth Patrick</fullName>
                </value>
                <value>
                    <fullName>Brian Siet</fullName>
                </value>
                <value>
                    <fullName>Cathy Hocutt</fullName>
                </value>
                <value>
                    <fullName>Chuck Moss</fullName>
                </value>
                <value>
                    <fullName>Curtis Olive</fullName>
                </value>
                <value>
                    <fullName>Devin Houlihan</fullName>
                </value>
                <value>
                    <fullName>Diann Powell</fullName>
                </value>
                <value>
                    <fullName>Eliot Becker</fullName>
                </value>
                <value>
                    <fullName>Ellen Cook</fullName>
                </value>
                <value>
                    <fullName>Gina Chen</fullName>
                </value>
                <value>
                    <fullName>Guillermo Rodriguez</fullName>
                </value>
                <value>
                    <fullName>James Karst</fullName>
                </value>
                <value>
                    <fullName>Jared Jones</fullName>
                </value>
                <value>
                    <fullName>Jim Meseke</fullName>
                </value>
                <value>
                    <fullName>John Mason</fullName>
                </value>
                <value>
                    <fullName>Julie Lemberg</fullName>
                </value>
                <value>
                    <fullName>Ken Fried</fullName>
                </value>
                <value>
                    <fullName>Kim Conaway</fullName>
                </value>
                <value>
                    <fullName>Lance Center</fullName>
                </value>
                <value>
                    <fullName>Larry Kaminsky</fullName>
                </value>
                <value>
                    <fullName>Lia Skoblov</fullName>
                </value>
                <value>
                    <fullName>Linda Boerma</fullName>
                </value>
                <value>
                    <fullName>Mark Collins</fullName>
                </value>
                <value>
                    <fullName>Michael MacCarthy</fullName>
                </value>
                <value>
                    <fullName>Nate Brown</fullName>
                </value>
                <value>
                    <fullName>Ray Schwarz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_of_Month__c</fullName>
        <formula>&quot;Week &quot; + TEXT(MOD(FLOOR(( DATEVALUE(CreatedDate)  - Date(Year(DATEVALUE(CreatedDate)),1,1))/7) + 26,52)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week of Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call__c</fullName>
        <formula>IF( OR( Subject = &quot;Step 1 - Welcome Call&quot;,
	Subject = &quot;Training Call&quot;,
	Subject = &quot;Step 2 - Cancellation Risk&quot;,
	Subject = &quot;Step 3 - Full Adoption&quot;,
	Subject = &quot;Step 4 - Engage/Account Review&quot;,
	Subject = &quot;Step 5 - Renewal Call&quot;,
        Subject = &quot;Step 1 - Welcome Call - SS&quot;,
	Subject = &quot;Step 2 - Cancellation Risk - SS&quot;,
	Subject = &quot;Step 3 - Full Adoption - SS&quot;,
	Subject = &quot;Step 4 - Engage/Account Review - SS&quot;,
	Subject = &quot;Step 5 - Renewal Call - SS&quot;),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_digit_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>First_Calls</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>First Call</value>
        </filters>
        <label>First Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Completed Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.STATUS</columns>
        <columns>Short_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>1 - My Open Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <columns>Short_Notes__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>2 - My Overdue Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_demo_list</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Product_Shown__c</columns>
        <columns>Solution_Architect__c</columns>
        <columns>Solution_Architect_2__c</columns>
        <columns>Short_Notes__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Demo - Prof. Software,Demo - Corp. Direct,Demo - Corp. Indirect,Demo - R&amp;L</value>
        </filters>
        <filters>
            <field>Product_Shown__c</field>
            <operation>equals</operation>
            <value>Tax Foundation</value>
        </filters>
        <label>New demo list</label>
        <sharedTo>
            <roleAndSubordinates>Director_Solution_Design</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SA_My_Completed_Demos</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Product_Shown__c</columns>
        <columns>Solution_Architect__c</columns>
        <columns>Solution_Architect_2__c</columns>
        <columns>Short_Notes__c</columns>
        <columns>FSR_Outcomes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Demo - Prof. Software,Demo - Corp. Direct,Demo - Corp. Indirect,Demo - R&amp;L</value>
        </filters>
        <filters>
            <field>Demo_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>I_am_SA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SA - My Completed Demos</label>
        <sharedTo>
            <roleAndSubordinates>Director_Solution_Design</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SA_My_Current_Demos</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Product_Shown__c</columns>
        <columns>Solution_Architect__c</columns>
        <columns>Solution_Architect_2__c</columns>
        <columns>Short_Notes__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Demo - Prof. Software,Demo - Corp. Direct,Demo - Corp. Indirect,Demo - R&amp;L</value>
        </filters>
        <filters>
            <field>Demo_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </filters>
        <filters>
            <field>I_am_SA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SA - My Current Demos</label>
        <sharedTo>
            <roleAndSubordinates>Director_Solution_Design</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SA_My_Overdue_Demos</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Product_Shown__c</columns>
        <columns>Solution_Architect__c</columns>
        <columns>Solution_Architect_2__c</columns>
        <columns>Short_Notes__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Demo - Prof. Software,Demo - Corp. Direct,Demo - Corp. Indirect,Demo - R&amp;L</value>
        </filters>
        <filters>
            <field>Demo_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>I_am_SA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EVENT.START_DATE_TIME</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>SA - My Overdue Demos</label>
        <sharedTo>
            <roleAndSubordinates>Director_Solution_Design</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>